# Omega-Code

./: .env  .env.example  .gitignore  .gitmodules  .vercelignore  ALIENWARE_AURORA_INTEGRATION.md  AUTONOMY_MODAL_ROS2_GUIDE.md  CI-CD-README.md  CI_CD_SETUP.md  COMPLETE_TEST_COVERAGE_ANALYSIS.md  CONSOLIDATION_COMPLETE.md  CSP_FIX_NOTES.md  CSP_WARNINGS_EXPLAINED.md  DIRECTORY_UNIFICATION_SUMMARY.md  DOCUMENTATION.md  ENVIRONMENT_VARIABLES.md  FILE_SUMMARY.md  FIX_CUDNN_JETSON.md  GATEWAY_LIGHTING_SETUP.md  HARDWARE_AUDIT_REPORT.md  HARDWARE_FIXES_APPLIED.md  HARDWARE_OPTIMIZATION_ANALYSIS.md  HARDWARE_OPTIMIZATION_COMPLETE.md  HARDWARE_PERFORMANCE_SUMMARY.md  HYBRID_SYSTEM_MODE_API.md  HYBRID_VISION_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_VERIFICATION.md  JETSON_ORIN_INTEGRATION.md  MOVEMENT_V2_HARDWARE_ABSTRACTION_COMPLETE.md  Makefile  NETWORK_DEVTOOLS_GUIDE.md  NETWORK_DEVTOOLS_QUICK_REFERENCE.md  OMEGAOS_LEVEL3_SETTINGS_UI_SUMMARY.md  OMEGAOS_SERVICE_ORCHESTRATOR_SUMMARY.md  OMEGA_CAPABILITY_QUICK_REF.md  OMEGA_DEVELOPMENT_BLUEPRINT.md  OMEGA_DEV_WORKFLOW.md  OMEGA_DEV_WORKFLOW_QUICKSTART.md  OMEGA_MULTI_PLATFORM_GUIDE.md  (+55 more)
.devcontainer/: Dockerfile  devcontainer.json
algorithms/: a_star.py
docs/: CI_CD.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  HARDWARE.md  HYBRID_SYSTEM_MODE_API.md  JETSON_PYTORCH.md  MARKDOWN_ANALYSIS.md  NETWORK.md  PLATFORMS.md  ROS2.md  SECURITY.md  SETUP.md  TESTING.md
omega_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ros/: pytest.ini
ros/robot_simulation/: CMakeLists.txt  package.xml
ros/src/omega_bringup/: package.xml  setup.py
ros/src/omega_bringup/config/: cyclonedds_laptop.xml  cyclonedds_pi.xml
ros/src/omega_bringup/launch/: omega_hybrid.launch.py  omega_minimal.launch.py  omega_sim.launch.py  omega_teleop.launch.py
ros/src/omega_robot/: package.xml  setup.cfg  setup.py
ros/src/omega_robot/omega_robot/: __init__.py  camera_debug_node.py  camera_publisher.py  camera_publisher_node.py  capability_utils.py  enhanced_telemetry.py  follow_line_action.py  motor_controller_node.py  navigate_to_goal_action.py  obstacle_avoidance_action.py  odometry_publisher.py  orin_ai_brain.py  path_planner.py  robot_controller.py  sensor_data_publisher.py  sensor_node.py  servo_controller_node.py  system_capabilities.py  telemetry_listener.py  telemetry_publisher.py  ultrasonic_avoidance_node.py  vision_processor.py  xbox_teleop_node.py
ros/src/omega_robot/resource/: omega_robot
scripts/: .env.example  _env_loader.sh  apply_profile.sh  bluetooth.sh  bt_diag.sh  check_endpoints.sh  connect_hotspot_v1.sh  connect_hotspot_v2.sh  connect_pan.sh  connect_robot_bluetooth.sh  deploy_ros_to_omega1.sh  dev_workflow_sync.sh  install_deps.sh  install_pytorch_jetson.sh  integrate_jetson.sh  net_profile.sh  optimize_hardware.sh  optimize_laptop_ros2.sh  pi_bt_pair_and_pan.sh  pi_connect_phone_pan.sh  quick_start_ros2.sh  run_all_tests.sh  run_all_tests_fixed.sh  run_hybrid_tests.sh  run_standalone.sh  setup_ap_mode.sh  setup_fresh_pi.sh  setup_jetson_orin.sh  setup_multidevice_ros2.sh  setup_pi_camera.sh  setup_pi_docker.sh  setup_ros2_laptop.sh  setup_ros2_rolling.sh  setup_ros_omega1.sh  ssh_omega1.sh  start_robot.sh  test_hardware_on_pi.sh  verify_integration.sh  (+2 more)
(+964 files in other folders)
